--- a/SignatureDetector/pom.xml
+++ b/SignatureDetector/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.github.hrozhek</groupId>
-    <artifactId>signist-ml-detector</artifactId>
+    <artifactId>signist-ml-signdetector</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Detector</name>
+    <name>SignatureDetector</name>
     <description>Detector</description>
     <properties>
         <java.version>17</java.version>
