Attempts on AuthService

--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/signist
+spring.datasource.username=root
+spring.datasource.password=${MYSQL_PASS}
+#todo if envvar doesn't work use intellij idea
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
