--- a/AuthService/pom.xml
+++ b/AuthService/pom.xml
@@ -3,29 +3,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.6</version>
+        <groupId>com.github.hrozhek</groupId>
+        <artifactId>signist-parent</artifactId>
+        <version>0.1-SNAPSHOT</version>
+        <!--        <version>${project.version}</version>-->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>com.github.hrozhek</groupId>
     <artifactId>signist-service-auth</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${project.version}</version>
     <name>AuthService</name>
     <description>AuthService</description>
 
-    <properties>
-        <java.version>17</java.version>
-        <mysql.version>8.0.28</mysql.version>
-        <lombok.version>1.18.26</lombok.version>
-    </properties>
-
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -40,6 +35,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-spring-boot-starter</artifactId>
+            <version>${spring-boot-grpc-starter.version}</version>
         </dependency>
 
         <dependency>
