--- a/PersonService/pom.xml
+++ b/PersonService/pom.xml
@@ -3,31 +3,26 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.6</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.github.hrozhek</groupId>
+        <artifactId>signist-parent</artifactId>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
-    <groupId>com.github.hrozhek</groupId>
-    <artifactId>signist-service-person</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>PersonService</name>
-    <description>PersonService</description>
+
+    <artifactId>signist-service-person-root</artifactId>
+    <version>${revision}</version>
+    <name>PersonService Root</name>
+    <description>PersonService root</description>
+    <packaging>pom</packaging>
+
     <properties>
         <java.version>17</java.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>Interface</module>
+        <module>Service</module>
+    </modules>
 
     <build>
         <plugins>
