--- a/PersonService/Service/pom.xml
+++ b/PersonService/Service/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.github.hrozhek</groupId>
         <artifactId>signist-parent</artifactId>
@@ -10,7 +11,6 @@
     </parent>
 
     <artifactId>signist-service-person</artifactId>
-    <version>${revision}</version>
     <name>PersonService</name>
     <description>PersonService</description>
 
@@ -35,9 +35,8 @@
         </dependency>
         <dependency>
             <groupId>net.devh</groupId>
-            <artifactId>grpc-client-spring-boot-autoconfigure</artifactId>
+            <artifactId>grpc-server-spring-boot-autoconfigure</artifactId>
             <version>${spring-boot-grpc-starter.version}</version>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -56,7 +55,7 @@
         <dependency>
             <groupId>com.github.hrozhek</groupId>
             <artifactId>signist-service-person-interface</artifactId>
-            <version>${revision}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
@@ -64,12 +63,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>net.devh</groupId>-->
-<!--            <artifactId>grpc-server-spring-boot-autoconfigure</artifactId>-->
-<!--            <version>2.14.0.RELEASE</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
