--- a/PersonService/Interface/pom.xml
+++ b/PersonService/Interface/pom.xml
@@ -16,10 +16,6 @@
 
 	<properties>
 		<java.version>17</java.version>
-
-		<protobuf.version>3.19.1</protobuf.version>
-		<protobuf-plugin.version>0.6.1</protobuf-plugin.version>
-		<grpc.version>1.42.1</grpc.version>
 	</properties>
 
 	<dependencies>
@@ -37,7 +33,7 @@
 			<!-- Java 9+ compatibility - Do NOT update to 2.0.0 -->
 			<groupId>jakarta.annotation</groupId>
 			<artifactId>jakarta.annotation-api</artifactId>
-			<version>1.3.5</version>
+			<version>${jakarta-annotation.version}</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
@@ -47,7 +43,7 @@
 			<extension>
 				<groupId>kr.motd.maven</groupId>
 				<artifactId>os-maven-plugin</artifactId>
-				<version>1.7.0</version>
+				<version>${os-maven-plugin.version}</version>
 			</extension>
 		</extensions>
 
