--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
         <spring-boot-grpc-starter.version>2.14.0.RELEASE</spring-boot-grpc-starter.version>
         <mysql.version>8.0.28</mysql.version>
         <lombok.version>1.18.26</lombok.version>
+        <protobuf.version>3.19.1</protobuf.version>
+        <protobuf-plugin.version>0.6.1</protobuf-plugin.version>
+        <grpc.version>1.42.1</grpc.version>
+        <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
+        <os-maven-plugin.version>1.7.0</os-maven-plugin.version>
     </properties>
 
     <groupId>com.github.hrozhek</groupId>
