--- a/PersonService/Interface/pom.xml
+++ b/PersonService/Interface/pom.xml
@@ -30,7 +30,12 @@
 			<version>${grpc.version}</version>
 		</dependency>
 		<dependency>
-			<!-- Java 9+ compatibility - Do NOT update to 2.0.0 -->
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>${protobuf.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>jakarta.annotation</groupId>
 			<artifactId>jakarta.annotation-api</artifactId>
 			<version>${jakarta-annotation.version}</version>
