--- a/Spoofer/Interface/pom.xml
+++ b/Spoofer/Interface/pom.xml
@@ -7,16 +7,12 @@
         <groupId>com.github.hrozhek</groupId>
         <artifactId>signist-parent</artifactId>
         <version>${revision}</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>signist-service-auth-interface</artifactId>
-    <name>Auth Interface</name>
-    <description>Interface</description>
-
-    <properties>
-        <java.version>17</java.version>
-    </properties>
+    <artifactId>signist-ml-spoofer-interface</artifactId>
+    <name>Spoofer Interface</name>
+    <description>Spoofer Interface</description>
 
     <dependencies>
         <dependency>
@@ -34,8 +30,8 @@
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
+
         <dependency>
-            <!-- Java 9+ compatibility - Do NOT update to 2.0.0 -->
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
             <version>${jakarta-annotation.version}</version>
@@ -73,5 +69,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
