--- a/SignaturistApplication/pom.xml
+++ b/SignaturistApplication/pom.xml
@@ -2,43 +2,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.6</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-    <groupId>com.github.hrozhek</groupId>
-    <artifactId>signist-app-signaturist</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
-    <name>SignaturistApplication</name>
-    <description>SignaturistApplication</description>
-    <properties>
-        <java.version>17</java.version>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <parent>
+        <groupId>com.github.hrozhek</groupId>
+        <artifactId>signist-parent</artifactId>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>signist-app-signaturist-root</artifactId>
+    <packaging>pom</packaging>
+    <name>SignaturistApplication root</name>
+    <description>SignaturistApplication root</description>
+
+    <modules>
+        <module>Application</module>
+
+<!--        TODO it should not be here-->
+        <module>../SignatureDetector/Interface</module>
+        <module>../Spoofer/Interface</module>
+        <module>../Verificator/Interface</module>
+        <module>../PersonService/Interface</module>
+        <module>../BillingService/Interface</module>
+    </modules>
+
+<!--    <profiles>-->
+<!--        <profile>-->
+<!--            <id>all-in-one</id>-->
+<!--            <modules>-->
+<!--                <module>../SignatureDetector/Interface</module>-->
+<!--                <module>../Spoofer/Interface</module>-->
+<!--                <module>../Verificator/Interface</module>-->
+<!--                <module>../PersonService/Interface</module>-->
+<!--                <module>../BillingService/Interface</module>-->
+<!--            </modules>-->
+<!--        </profile>-->
+<!--    </profiles>-->
 
     <build>
         <plugins>
