--- a/Spoofer/Interface/pom.xml
+++ b/Spoofer/Interface/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.github.hrozhek</groupId>
         <artifactId>signist-parent</artifactId>
         <version>${revision}</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>signist-ml-spoofer-interface</artifactId>
