intermediate commit which is almost done as very basic version

--- a/PersonService/pom.xml
+++ b/PersonService/pom.xml
@@ -20,6 +20,7 @@
     </properties>
 
     <modules>
+        <module>Data</module>
         <module>Interface</module>
         <module>Service</module>
     </modules>
