--- a/PersonService/Service/pom.xml
+++ b/PersonService/Service/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.hrozhek</groupId>
+            <artifactId>signist-service-person-data</artifactId>
+            <version>0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
