--- a/Verificator/pom.xml
+++ b/Verificator/pom.xml
@@ -18,5 +18,8 @@
     <modules>
         <module>Interface</module>
         <module>Service</module>
+
+<!--        TODO it should not be here-->
+        <module>../PersonService/Data</module>
     </modules>
 </project>
