--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <grpc.version>1.42.1</grpc.version>
         <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
         <os-maven-plugin.version>1.7.0</os-maven-plugin.version>
+        <swagger-annotations.version>2.2.7</swagger-annotations.version>
     </properties>
 
     <groupId>com.github.hrozhek</groupId>
