Services looks ready and can be compiled, grpc dependencies are not ready

--- a/SignatureDetector/Service/pom.xml
+++ b/SignatureDetector/Service/pom.xml
@@ -11,8 +11,8 @@
     </parent>
 
     <artifactId>signist-ml-signdetector-service</artifactId>
-    <name>Signature Service</name>
-    <description>Signature Service</description>
+    <name>Detector Service</name>
+    <description>Detector Service</description>
 
     <dependencies>
         <!--        <dependency>-->
