--- a/PersonService/Service/pom.xml
+++ b/PersonService/Service/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
 
 
         <dependency>
