Almost working build (except application) that is rollbacked to spring boot 2.7.0

--- a/PersonService/Data/pom.xml
+++ b/PersonService/Data/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>signist-service-person-data</artifactId>
     <name>PersonService Data</name>
     <description>PersonService Data</description>
+    <packaging>jar</packaging>
 
 
     <dependencies>
@@ -35,13 +36,13 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
 
 </project>
