--- a/Verificator/Service/src/main/resources/application.properties
+++ b/Verificator/Service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=7705
+
 user.path=${SIGNIST_PATH}
+
+spring.datasource.url=jdbc:mysql://localhost:3306/signist
+spring.datasource.username=root
+spring.datasource.password=${MYSQL_PASS}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
