--- a/AuthService/Service/src/main/resources/application.properties
+++ b/AuthService/Service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=7702
+
 spring.datasource.url=jdbc:mysql://localhost:3306/signist
 spring.datasource.username=root
 spring.datasource.password=${MYSQL_PASS}
