--- a/PersonService/Service/pom.xml
+++ b/PersonService/Service/pom.xml
@@ -58,18 +58,18 @@
             <artifactId>signist-service-person-interface</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.hrozhek</groupId>
+            <artifactId>signist-service-person-data</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.github.hrozhek</groupId>
-            <artifactId>signist-service-person-data</artifactId>
-            <version>0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
+
     </dependencies>
 
     <build>
