--- a/BillingService/Service/src/main/resources/application.properties
+++ b/BillingService/Service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=7703
+grpc.server.port=7703
 
 spring.datasource.url=jdbc:mysql://localhost:3306/signist
 spring.datasource.username=root
