--- a/PersonService/Service/src/main/resources/application.properties
+++ b/PersonService/Service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=7704
+grpc.server.port=7704
 
 spring.datasource.url=jdbc:mysql://localhost:3306/signist
 spring.datasource.username=root
