app is alive though it is not working. swagger is unavailable

--- a/SignaturistApplication/Application/src/main/resources/application.properties
+++ b/SignaturistApplication/Application/src/main/resources/application.properties
@@ -1,2 +1,20 @@
+grpc.client.model.security.clientAuthEnabled=false
+grpc.client.model.negotiationType=PLAINTEXT
+
+grpc.client.person.security.clientAuthEnabled=false
+grpc.client.person.negotiationType=PLAINTEXT
+
+grpc.client.billing.security.clientAuthEnabled=false
+grpc.client.billing.negotiationType=PLAINTEXT
+
+grpc.client.detector.security.clientAuthEnabled=false
+grpc.client.detector.negotiationType=PLAINTEXT
+
+grpc.client.verificator.security.clientAuthEnabled=false
+grpc.client.verificator.negotiationType=PLAINTEXT
+
+grpc.client.spoofing.security.clientAuthEnabled=false
+grpc.client.spoofing.negotiationType=PLAINTEXT
+
 server.port=7070
 
