--- a/BillingService/Service/src/main/resources/application.properties
+++ b/BillingService/Service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+grpc.server.security.enabled=false
 grpc.server.port=7703
 
 spring.datasource.url=jdbc:mysql://localhost:3306/signist
@@ -5,7 +6,3 @@ spring.datasource.username=root
 spring.datasource.password=${MYSQL_PASS}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-
-
-
