Alive except some calls (Cancelling the stream with status Status{code=INTERNAL, description=Completed without a response, cause=null})

--- a/SignaturistApplication/Application/src/main/resources/application.properties
+++ b/SignaturistApplication/Application/src/main/resources/application.properties
@@ -1,20 +1,31 @@
 grpc.client.model.security.clientAuthEnabled=false
+grpc.client.model.address=static://127.0.0.1:7704
+#grpc.client.model.address=//localhost:7704
 grpc.client.model.negotiationType=PLAINTEXT
 
 grpc.client.person.security.clientAuthEnabled=false
+grpc.client.person.address=static://127.0.0.1:7704
+#grpc.client.person.address=//localhost:7704
 grpc.client.person.negotiationType=PLAINTEXT
 
 grpc.client.billing.security.clientAuthEnabled=false
+grpc.client.billing.address=static://127.0.0.1:7703
+#grpc.client.billing.address=//localhost:7703
 grpc.client.billing.negotiationType=PLAINTEXT
 
 grpc.client.detector.security.clientAuthEnabled=false
+grpc.client.detector.address=static://127.0.0.1:7705
+#grpc.client.detector.address=//localhost:7705
 grpc.client.detector.negotiationType=PLAINTEXT
 
 grpc.client.verificator.security.clientAuthEnabled=false
+grpc.client.verificator.address=static://127.0.0.1:7708
+#grpc.client.verificator.address=//localhost:7708
 grpc.client.verificator.negotiationType=PLAINTEXT
 
 grpc.client.spoofing.security.clientAuthEnabled=false
+grpc.client.spoofing.address=static://127.0.0.1:7706
+#grpc.client.spoofing.address=//localhost:7706
 grpc.client.spoofing.negotiationType=PLAINTEXT
 
 server.port=7070
-
